refactoring: cleanup